RESOLVED FIXED161779
Text replacement candidates don't always overwrite the entire original string
https://bugs.webkit.org/show_bug.cgi?id=161779
Summary Text replacement candidates don't always overwrite the entire original string
Tim Horton
Reported 2016-09-08 17:38:18 PDT
WebKit not always respecting range of candidates
Attachments
Patch (21.87 KB, patch)
2016-09-08 17:39 PDT, Tim Horton
no flags
Patch (22.02 KB, patch)
2016-09-09 13:14 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2016-09-08 17:39:22 PDT
Simon Fraser (smfr)
Comment 2 2016-09-08 17:51:44 PDT
Comment on attachment 288369 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=288369&action=review > Source/WebCore/ChangeLog:3 > + WebKit not always respecting range of candidates This title is not very helpful. Which candidates? "the range"? > Source/WebCore/editing/Editor.cpp:3620 > +void Editor::selectTextCheckingResult(TextCheckingResult result) Pass by reference? It's not tiny.
Tim Horton
Comment 3 2016-09-08 18:04:30 PDT
(In reply to comment #2) > Comment on attachment 288369 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=288369&action=review > > > Source/WebCore/ChangeLog:3 > > + WebKit not always respecting range of candidates > > This title is not very helpful. Which candidates? "the range"? Heh, sure, will fix. > > Source/WebCore/editing/Editor.cpp:3620 > > +void Editor::selectTextCheckingResult(TextCheckingResult result) > > Pass by reference? It's not tiny. Sure!
Tim Horton
Comment 4 2016-09-09 13:14:37 PDT
Tim Horton
Comment 5 2016-09-09 13:37:30 PDT
WebKit Commit Bot
Comment 6 2016-09-09 13:48:26 PDT
Comment on attachment 288432 [details] Patch Clearing flags on attachment: 288432 Committed r205765: <http://trac.webkit.org/changeset/205765>
WebKit Commit Bot
Comment 7 2016-09-09 13:48:30 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.